tests/snapshots/addresses/utxos/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - addresses
    - utxos
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <ADDRESS>

Usage: kermit addresses utxos <ADDRESS>

For more information, try '--help'.
